# FTV

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: install_ffmpeg.sh
src/: main.rs
src/commands/: cli.rs  decode.rs  encode.rs  mod.rs  verify.rs
src/core/: checksum.rs  file_reader.rs  frame_reader.rs  frame_writer.rs  metadata.rs  mod.rs  video_decoder.rs  video_encoder.rs
src/errors/: errors.rs  mod.rs
src/utils/: cmd_runner.rs  mod.rs
