[package]
name = "ftv"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/Junaid433/FTV"
homepage = "https://github.com/Junaid433/FTV"
description = "Convert anything to video and revert to normal!"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
image = "0.25"
indicatif = "0.17"
anyhow = "1"
tempfile = "3"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"